--- a/Project3/TTT.html
+++ b/Project3/TTT.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <h1>TIC-TAC-TOE</h1>
-          </header>
+        </header>
         <section>
           <nav>
               <ol id="intro">
@@ -20,7 +20,7 @@
                   <li>Click "Start Over" to start a new game</li>
                   <li>Have fun!</li>
               </ol>
-              <p><p id="turn"></p></p>
+              <p id="turn"></p>
               <script>
                 document.getElementById("turn").innerHTML = "Player 1's turn";
               </script>
@@ -53,7 +53,7 @@
         </section>
         
         <footer>
-          <p><p id="result"></p></p>
+          <p id="result"></p>
         </footer>
     </body>
 </html>
